--- a/index.html
+++ b/index.html
@@ -2,11 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FuTshirts</title>
+    <title>Home</title>
     <link rel="stylesheet" type ="text/css" href="index.css">
 
 </head>
 <body>
+
+<div id="layout">
+    <header style="grid-area: header1">
+        <ul class="navigation">
+            <a href="index.html" target="_blank"><img src="logoweb.png" width="100px"/></a>
+            <section class="bottons">
+                <li><a href="#">Login</a></li>
+                <li><a href="formulari.html">Register</a></li>
+                <li><a href="#">Carrito</a></li>
+            </section>
+
+        </ul>
+    </header>
+
+
+
+
+
+</div>
 
 </body>
 </html>
