--- a/formulari.html
+++ b/formulari.html
@@ -8,10 +8,23 @@
 </head>
 <body>
 
+<header style="grid-area: header1">
+    <ul class="navigation">
+        <a href="index.html" target="_blank"><img src="logoweb.png" width="100px"/></a>
+        <section class="bottons">
+            <li><a href="#">Login</a></li>
+            <li><a href="formulari.html">Register</a></li>
+            <li><a href="#">Carrito</a></li>
+        </section>
+
+    </ul>
+</header>
+
 <div id="div1">
 
     <div>
         <h1>Benvingut, si us plau registreu-vos</h1>
+
     </div>
 
     <section>
