--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul class="navigation">
             <a href="index.html" target="_blank"><img src="logoweb.png" width="100px"/></a>
             <section class="bottons">
+                <li> <a href="index.html">Home</a></li>
                 <li><a href="#">Login</a></li>
                 <li><a href="formulari.html">Register</a></li>
                 <li><a href="#">Carrito</a></li>
