--- a/index.html
+++ b/index.html
@@ -25,8 +25,20 @@
 
 
 
+</div>
+
+<div id="home-columns">
+
+    <div id="elements">
+        <li> <img src="premier.png" width="300"/></li>
+        <li> <img src="laliga.jpg" width="300"/></li>
+        <li> <img src="laliga.jpg" width="100px"/></li>
+        <li> <img src="laliga.jpg" width="100px"/></li>
+        <li> <img src="laliga.jpg" width="100px"/></li>
+    </div>
 
 </div>
+
 
 </body>
 </html>
