--- a/index.html
+++ b/index.html
@@ -29,13 +29,34 @@
 
 <div id="home-columns">
 
-    <div id="elements">
-        <li> <img src="premier.png" width="300"/></li>
-        <li> <img src="laligasantander.png" width="300"/></li>
-        <li> <img src="laliga.jpg" width="100px"/></li>
-        <li> <img src="laliga.jpg" width="100px"/></li>
-        <li> <img src="laliga.jpg" width="100px"/></li>
+    <div id="elements" style="grid-area: elementos">
+
+        <div style="grid-area: premier"> <li> <img src="premier.png" width="300"/></li> </div>
+        <div style="grid-area: santander"> <li> <img src="laligasantander.png" width="300"/></li> </div>
+        <div style="grid-area: bundes"> <li> <img src="ligabundes.png"/></li> </div>
+        <div style="grid-area: francesa"> <li> <img src="ligafrancesa.png"/></li> </div>
+
     </div>
+
+    <div id="camisetas">
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+        <img src="premier.png" width="300"/>
+
+    </div>
+
+
+
 
 </div>
 
