--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>FUTSHIRTS</title>
     <link rel="stylesheet" type ="text/css" href="index.css">
 
 </head>
