--- a/login.html
+++ b/login.html
@@ -9,9 +9,9 @@
 
 <header style="grid-area: header1">
     <ul class="navigation">
-        <a href="index.html" target="_blank"><img src="logoweb.png" width="100px"/></a>
+        <a href="index.php" target="_blank"><img src="logoweb.png" width="100px"/></a>
         <section class="bottons">
-            <li> <a href="index.html">Home</a></li>
+            <li> <a href="index.php">Home</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="formulari.html">Register</a></li>
             <li><a href="#">Carrito</a></li>
@@ -44,7 +44,7 @@
     </section>
 
     <div id="imagenAbajo">
-        <a href="index.html" target="_blank"><img src="logoweb2.png" width="550px"/></a>
+        <a href="index.php" target="_blank"><img src="logoweb2.png" width="550px"/></a>
     </div>
 
 </div>
